Fix long solution wrap

--- a/src/scss/pages/_clue.scss
+++ b/src/scss/pages/_clue.scss
@@ -169,17 +169,14 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        row-gap: 6px;
         font-family: $lc-font--alt;
         z-index: 20;
         transition: opacity $lc-transition--short ease;
         text-align: center;
         text-transform: uppercase;
         font-size: 1.25rem;
-        background-color: $lc-gray--v-light;
-
-        html.dark & {
-          background-color: #171717; // neutral-900
-        }
+        background-color: transparent;
 
         @media (max-height: 600px) {
           margin: 0 auto;
